--- a/cheng/package.json
+++ b/cheng/package.json
@@ -1,6 +1,29 @@
 {
+  "name": "sensor-dashboard",
+  "version": "1.0.0",
+  "description": "Real-time dashboard for Raspberry Pi Pico W sensor data",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "keywords": [
+    "sensors",
+    "raspberry-pi",
+    "dashboard",
+    "express",
+    "socket.io",
+    "real-time"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "sensor-dashboard": "file:",
+    "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
