--- a/cheng/package.json
+++ b/cheng/package.json
@@ -18,8 +18,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@redis/time-series": "^1.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "proper-lockfile": "^4.1.2",
+    "redis": "^4.7.0",
     "sensor-dashboard": "file:",
     "socket.io": "^4.7.2"
   },
