test websocket deployment

--- a/cheng/package.json
+++ b/cheng/package.json
@@ -24,7 +24,8 @@
     "proper-lockfile": "^4.1.2",
     "redis": "^4.7.0",
     "sensor-dashboard": "file:",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
