--- a/cheng/package.json
+++ b/cheng/package.json
@@ -21,6 +21,7 @@
     "@redis/time-series": "^1.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mqtt": "^5.10.4",
     "proper-lockfile": "^4.1.2",
     "redis": "^4.7.0",
     "sensor-dashboard": "file:",
