--- a/cheng/package.json
+++ b/cheng/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mqtt": "^5.10.4",
+    "node-schedule": "^2.1.1",
     "proper-lockfile": "^4.1.2",
     "redis": "^4.7.0",
     "sensor-dashboard": "file:",
